styles/Home.module.css
.home{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 0;
  width: 100%;
  position: relative;
  min-height: 810px;
  height: 810px;
}
.home-txt{
  width: 450px;
  padding: 20px 100px 0 100px;
  position: absolute;
  z-index: 10;
  background: rgb(0,0,124);
  background: linear-gradient(90deg, rgba(0,0,124,0.7792366946778712) 0%, rgba(255,255,255,0) 100%);
  color: white;
  height: 100%;
  width: 70%;
  display: flex;
  flex-direction: column;
  place-content: center;
  text-align: start;
}
.home-txt h1{
  /* margin-left: 30px; */
  font-size: 45px;
  width: 80%;
}
.home-txt p{
  margin-left: 50px;
  font-size: 22px;
  width: 55%;
}
.home-txt h6{
  margin-top:20px;
  text-align: center;
}

/* BBS VALUES */
.values{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center; 
  overflow: auto;
  width: 100%;
  margin-bottom: 50px;
}
.card{
  min-width: 320px;
  width: 370px;
  min-height: 550px;
  height: fit-content;
  background-color: rgb(255, 255, 255);
  margin-bottom: 20px;
  margin-right: 50px;
  border-radius: 40px;
  color: black;
  padding: 10px;
}
/* .value:hover{
  -webkit-animation: shadow-pop-bl 0.3s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
	animation: shadow-pop-bl 0.3s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
} */
.article-img{
  /* padding: 10px; */
  width: 100%;
  height: 180px;
  border-radius: 40px;
  object-fit:cover;
}
.article-txt{
  padding: 20px;
}
.article-txt h4{
  margin-bottom: 10px;
}
.article-section-title{
  margin-top: 80px;
  text-align: center;
  margin-bottom: 30px;
}
.article-section-title h2{
  color: #01013F;
}
.article-section-title h3{
  color:#F8841C;
  letter-spacing: 5px;
}
.article-link{
  color: #FF7F00;
  display: flex;
  width: fit-content;
  padding: 0 10px 0 10px;
  margin-left: auto;
  font-weight: bold;
  border-radius: 20px;
  margin-top: 5px;
}
.article-link:hover{
  background-color: #FF7F00;
  color: white;
  transition: 0.3s;
}

/* PORTOFOLIO */
.portofolio-content{
  min-height: 100vh;
  text-align: center;
  padding: 80px 0 50px 0;
}
.portofolio-content h2{
  color: white;
}
.portofolio-content h3{
  color: #F8841C;
  letter-spacing: 5px;
}
.portofolio{
  /* margin:0 20px 0 20px; */
  display: flex;
  flex-direction: row;
  /* flex-wrap: wrap; */
  overflow-x:auto;
  padding-right: 10px;
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
  margin-top: 20px;
}
.portofolio::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari and Opera */
  display: none;
}
.portofolio-txt{
  margin-left: 50%;
  padding-top: 40px;
  /* font-size: 30px; */
}
/* .portofolio-img-horizontal{
  height: 200px;
  width: 300px;
} */
.porto{
  object-fit: cover;
}


/* SERVICE */
.services{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap-reverse;
  justify-content: center;
  width: 100%;
  /* padding-top: 50px; */
  min-height:120vh ;
  height: fit-content;
  align-items: center;
  
}
.service-img{
  object-fit: cover;
  width: 100%;
  height: 320px;
  border-radius: 40px;
}
.service-txt{
  min-width: 320px;
  width: 370px;
  min-height: 300px;
  /* margin-top:200px; */
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.service-txt h2{
  color: #01013F;
}
.service-txt h3{
  color: #FF7F00;
}
.service-card-title{
  text-align: center;
}
.service-link{
  margin-top: 10px;
  color: #FF7F00;
  font-weight: bold;
  font-size: 21px;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 200px;
  height: 60px;
  border-radius: 40px;
  margin-left: auto;
  margin-right: auto;
}
.service-link:hover{
 background-color: #FF7F00;
 color: white;
 transition: 0.3s;
}


/* OUR CLIENTS */
.our-clients-content{
  height: 100vh;
  padding: 80px 0 80px 0;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  overflow-x:auto;
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}
.our-clients-content h2{
  color: #01013F;
}
.our-clients-content h3{
  color: #F8841C;
  /* letter-spacing: 5px; */
}
.clients{
  display: flex;
  flex-direction: row;
  padding-right: 10px;
  background-color: white;
  margin-top: 20px;
  padding: 10px 30px 10px 30px
}
.clients::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari and Opera */
  display: none;
}
.client{
  object-fit: contain;
}

/* COLLABORATE */
.collaborate{
  display: flex;
  /* flex-direction: row; */
  min-height: 100vh;
  height: fit-content;
  align-items: center;
  margin: 50px 10px 50px 10px;
}
.collaborate-content{
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap-reverse;
}
.collaborate-img{
  object-fit: cover;
  border-radius: 45px;
  align-self: center;
  margin-right: 5%;
  margin-top: 20px;
}
.collaborate-txt{
  width: 40%;
  min-width: 400px;
  /* margin-right: 10%; */
  color: white;
  padding: 0 10px 0 10px;
}
.collaborate-txt h3{
  color: #FC9038;
}
.collaborate-txt p{
  font-size: 15px;
}



/* .section-title{
  text-align: start;
  margin-left: 150px;
  padding-top: 50px;
} */
.horizontal-img{
  /* object-fit: cover; */
  height: 200px;
  width: 300px;
  margin-bottom: -10px;
}
.horizontal-img-sm{
  /* object-fit: cover; */
  height: 200px;
  width: 250px;
  margin-bottom: -10px;
}
.square-img{
  /* object-fit: contain; */
  height: 170px;
  /* margin-bottom: 10px;
  margin-left: 10px; */
  min-width: 150px;
  /* margin-right: 10px; */
}
.vertical-img{
  object-fit: cover;
  margin-bottom: -10px;
}
.vertical-center{
  display: flex;
  align-items: center;
}
.img-container{
  position: relative;
  width: fit-content;
  height: auto;
  overflow: hidden;
  margin-bottom: 10px;
  margin-left: 10px;
  margin-right: 10px;
}
.img-desc{
  position: absolute;
  background-color: rgba(40, 40, 40, 0.51);
  color: rgb(234, 234, 234);
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.img-container:hover .img-desc{
	-webkit-animation: slide-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: slide-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}





@media (max-width: 1000px) {
  .home-txt{
    width: 100%;
    /* padding-top: 100px; */
  }
  .home-txt p{
    font-size: 20px;
  }
  .collaborate-txt{
    width: 100%;
    min-width: 0;
  }
}
@media (max-width: 768px) {
  .home-txt{
    width: 100%;
    padding: 20px;
  }
  .home-txt h1{
    font-size: 35px;
    width: 100%;
  }
  .home-txt p{
    font-size: 20px;
    margin-left: 0;
    width: 100%;
  }
  .home-txt h6{
    font-size: 35px;
    /* width: 100%; */
  }
  .card{
    margin-right: 0;
  }
  .section-title{
    text-align: center;
    margin-left: 0;
    /* margin-left: 150px; */
  }
  .portofolio-txt{
    margin-left: 0;
    text-align: center;
  }
  
  .collaborate-img{
    width: 100%;
    margin-right: 0;
  }
}


/* ----------------------------------------------
 * Generated by Animista on 2023-11-10 14:25:51
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation slide-top
 * ----------------------------------------
 */
 @-webkit-keyframes slide-top {
  0% {
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
  100% {
    -webkit-transform: translateY(-100%);
            transform: translateY(-100%);
  }
}
@keyframes slide-top {
  0% {
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
  100% {
    -webkit-transform: translateY(-100%);
            transform: translateY(-100%);
  }
}

/* ----------------------------------------------
 * Generated by Animista on 2023-11-14 9:16:13
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation shadow-pop-bl
 * ----------------------------------------
 */
 @-webkit-keyframes shadow-pop-bl {
  0% {
    -webkit-box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
            box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
    -webkit-transform: translateX(0) translateY(0);
            transform: translateX(0) translateY(0);
  }
  100% {
    -webkit-box-shadow: -1px 1px #3e3e3e, -2px 2px #3e3e3e, -3px 3px #3e3e3e, -4px 4px #3e3e3e, -5px 5px #3e3e3e, -6px 6px #3e3e3e, -7px 7px #3e3e3e, -8px 8px #3e3e3e;
            box-shadow: -1px 1px #3e3e3e, -2px 2px #3e3e3e, -3px 3px #3e3e3e, -4px 4px #3e3e3e, -5px 5px #3e3e3e, -6px 6px #3e3e3e, -7px 7px #3e3e3e, -8px 8px #3e3e3e;
    -webkit-transform: translateX(8px) translateY(-8px);
            transform: translateX(8px) translateY(-8px);
  }
}
@keyframes shadow-pop-bl {
  0% {
    -webkit-box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
            box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
    -webkit-transform: translateX(0) translateY(0);
            transform: translateX(0) translateY(0);
  }
  100% {
    -webkit-box-shadow: -1px 1px #3e3e3e, -2px 2px #3e3e3e, -3px 3px #3e3e3e, -4px 4px #3e3e3e, -5px 5px #3e3e3e, -6px 6px #3e3e3e, -7px 7px #3e3e3e, -8px 8px #3e3e3e;
            box-shadow: -1px 1px #3e3e3e, -2px 2px #3e3e3e, -3px 3px #3e3e3e, -4px 4px #3e3e3e, -5px 5px #3e3e3e, -6px 6px #3e3e3e, -7px 7px #3e3e3e, -8px 8px #3e3e3e;
    -webkit-transform: translateX(8px) translateY(-8px);
            transform: translateX(8px) translateY(-8px);
  }
}

